[package]
name = "dragon"
version = "0.1.0"
authors = ["Sean Smith <sean.smith@tenx.tech>"]
edition = "2018"

[dependencies]
dotenv = "0.9.0"
rocket = "0.4.0-rc.1"
diesel = { version = "1.0.0", features = ["postgres"] }
rocket_contrib = "0.4.0"
serde = "1.0.86"
serde_json = "1.0"
serde_derive = "1.0.86"
r2d2-diesel = "1.0"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test"]
